# REDFORGE

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  RELEASE_NOTES.md  ROADMAP.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
backend/: .env.example  alembic.ini  requirements-dev.txt  requirements.txt
backend/alembic/: env.py
backend/app/: config.py  errors.py  logging_config.py  main.py  static_serving.py  version.py
backend/scripts/: run_research_benchmark.py
backend/tests/: conftest.py  test_benchmark_center.py  test_benchmark_metrics.py  test_benchmark_runner.py  test_cli.py  test_continuous_security.py  test_datasets_lab.py  test_errors.py  test_evaluation_engine.py  test_health.py  test_infrastructure.py  test_intelligent_evaluation.py  test_judge.py  test_maintenance_pass.py  test_model_manager.py  test_onboarding.py  test_phase25.py  test_providers.py  test_recommendations.py  test_release_hardening.py  test_runtime.py  test_runtime_manager.py  test_selfinstaller.py  test_sessions.py  test_static.py  test_studio.py  test_system.py  test_terminal.py  test_training_lab.py  test_updater.py  test_version.py  test_weighted_engine.py
cli/: README.md  __init__.py  pyproject.toml
cli/redforge/: __init__.py  __main__.py  _version.py  cli.py  colors.py  diagnose.py  diagnostics.py  installer.py  paths.py  process.py  shortcuts.py  updater.py
docs/: architecture-audit-v1.2.md  architecture-overview.md  architecture.md  cli-reference.md  common-errors.md  evaluation-engine.md  faq.md  first-run-experience.md  frontend-architecture.md  gpu-support.md  installation.md  intelligent-evaluation.md  model-installation.md  providers.md  quickstart.md  runtime.md  session-architecture.md  troubleshooting.md
docs/architecture/: database.md  (+11 more)
frontend/: index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
installers/: README.md
releases/: .gitignore
scripts/: build_release.py  checksums.py  generate_icons.py  redforge  redforge.cmd  version.py
website/: README.md  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
(+246 files in other folders)
